[package]
name = "pw-hashing-rust"
version = "0.2.4"
edition = "2024"
authors = ["MiloTheFox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "*"
rand_core = { version = "*", features = ["getrandom"] }
colored = "*"
zeroize = "*"
futures = "*"
passwords = { version = "*", features = ["common-password"] }
lazy_static = "*"
rayon = "*"
log = "*"
thiserror = "*"
rand = "*"


[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 3