[package]
name = "pw-hashing-rust"
version = "0.2.5"
edition = "2024"
authors = ["MiloTheFox"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
colored = "2.1.0"
zeroize = "1.7.0"
futures = "0.3.30"
passwords = { version = "3.1.16", features = ["common-password"] }
lazy_static = "1.4.0"
rayon = "1.10.0"
log = "0.4.21"
thiserror = "1.0.58"
rand = "0.9.0-alpha.1"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
incremental = false
panic = "abort"

